Actions
Bug #12422
openipw: variable may be used uninitialized
Start date:
Due date:
% Done:
90%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with gcc 9:
../../common/io/ipw/ipw2100.c: In function 'ipw2100_send': ../../common/io/ipw/ipw2100.c:2161:8: error: 'bidx' may be used uninitialized in this function [-Werror=maybe-uninitialized] 2161 | txbuf = sc->sc_txbufs[bidx]; | ~~~~~~^~~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors
Actions