12422 ipw: variable may be used uninitialized

../../common/io/ipw/ipw2100.c: In function 'ipw2100_send':
../../common/io/ipw/ipw2100.c:2161:8: error: 'bidx' may be used uninitialized in this function [-Werror=maybe-uninitialized]
 2161 |  txbuf = sc->sc_txbufs[bidx];
      |  ~~~~~~^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors

Change-Id: I90098b6be48e26040a819f0b79af570ed9cd51cb